@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <registry>
-    <record name="collective.nitf.controlpanel.INITFSettings.sections" delete="true" />
-    <record name="collective.nitf.controlpanel.INITFSettings.default_section" delete="true" />
-    <record name="collective.nitf.controlpanel.INITFSettings.default_genre" delete="true" />
-    <record name="collective.nitf.controlpanel.INITFSettings.default_urgency" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.sections" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.default_section" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.possible_genres" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.default_genre" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.default_urgency" delete="true" />
+ <record name="collective.nitf.controlpanel.INITFSettings.relatable_content_types" delete="true" />
 </registry>
